Installed buttons for searching

--- a/FrontEnd/AllEvents.html
+++ b/FrontEnd/AllEvents.html
@@ -23,6 +23,13 @@
         <button id="search-button">Search</button>
     </div>
    
+    <!-- New buttons container below the search bar -->
+    <div class="buttons-container">
+        <button class="custom-btn" id="Location">Location</button>
+        <button class="custom-btn" id="EventName">Event Name</button>
+        <button class="custom-btn" id="Creator">Created By</button>
+    </div>
+   
     <script src="AllEvents.js"></script>
 </body>
 </html>
