--- a/FrontEnd/AllEvents.html
+++ b/FrontEnd/AllEvents.html
@@ -13,7 +13,8 @@
         </div>
         <div class="auth-buttons">
             <button class="login-btn">Login</button>
-            <button class="signup-btn">Sign Up</button>
+            
+            <button id="signup-btn">Sign Up</button>
         </div>
     </div>
    
