--- a/FrontEnd/SignUpPage.html
+++ b/FrontEnd/SignUpPage.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h2>Create Account</h2>
-        <form action="https://ki-8ew8.onrender.com/KickIt/signUp" method="POST">
+        <form action="https://kickits-1.onrender.com/KickIt/signUp" method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required placeholder="Enter your username">
