some minor commits

--- a/ChatAppPractice/index.html
+++ b/ChatAppPractice/index.html
@@ -84,7 +84,7 @@
             <button id="send-button">Send</button>
         </div>
     </div>
-    <script defer src="http://127.0.0.1:3000/socket.io/socket.io.js"></script>
+    <script defer src="https://kickits-chatapp.onrender.com/socket.io/socket.io.js"></script>
     <script defer src="script.js"></script>
 </body>
 </html>
