This is something new

--- a/FrontEnd/Login.html
+++ b/FrontEnd/Login.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h2>Login</h2>
-        <form action="https://kickits-1.onrender.com/KickIt/login" method="POST">
+        <form action="http://127.0.0.1:8000/KickIt/login" method="POST">
             
             <div class="form-group">
                 <label for="email">Email</label>
@@ -20,7 +20,7 @@
                 <input type="password" id="password" name="password" required placeholder="Enter your password">
             </div>
            
-            <button type="submit" class="btn">Login</button>
+            <button type="submit" class="btn">Sign Up</button>
         </form>
         <div class="footer">
             <p> Create a account <a href="./SignUpPage.html">Log In</a></p>
