--- a/FrontEnd/SignUpPage.html
+++ b/FrontEnd/SignUpPage.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h2>Create Account</h2>
-        <form action="https://kickits-1.onrender.com/KickIt/signUp" method="POST">
+        <form action="http://127.0.0.1:8000/KickIt/signUp" method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required placeholder="Enter your username">
@@ -29,7 +29,7 @@
             <button type="submit" class="btn">Sign Up</button>
         </form>
         <div class="footer">
-            <p>Already have an account? <a href="/login">Log In</a></p>
+            <p>Already have an account? <a href="./Login.html">Log In</a></p>
         </div>
     </div>
 
