--- a/FrontEnd/Login.html
+++ b/FrontEnd/Login.html
@@ -20,10 +20,10 @@
                 <input type="password" id="password" name="password" required placeholder="Enter your password">
             </div>
            
-            <button type="submit" class="btn">Sign Up</button>
+            <button type="submit" class="btn">Login</button>
         </form>
         <div class="footer">
-            <p> Create a account <a href="./SignUpPage.html">Log In</a></p>
+            <p> Create a account <a href="./SignUpPage.html">Sign Up</a></p>
         </div>
     </div>
 
