new commits pushed frontend

--- a/FrontEnd/EventDetails.html
+++ b/FrontEnd/EventDetails.html
@@ -24,7 +24,10 @@
             <p id="Date">Address: 123 Main St, Anytown, USA</p>
             <h3>Time</h3>
             <p>20:20AM</p>
+            <div id='division'>
+            <button id="Join">Join</button>
             <button id="Chat">Chat</button>
+        </div>
         </div>
     </div>
     <script src="EventDetails.js"></script>
