--- a/FrontEnd/AllEvents.html
+++ b/FrontEnd/AllEvents.html
@@ -18,6 +18,7 @@
             <button id="createEvent">Create</button>
             <button id="Logout">Logout</button>
             <button id="MyEvents">My Events</button>
+            <img id="image"src="https://img.icons8.com/ios/50">
             
         
         </div>
