--- a/FrontEnd/profile.html
+++ b/FrontEnd/profile.html
@@ -72,7 +72,7 @@
     <div id="profile-container" class="profile-container">
         <div class="profile-header" id="profile-header">
             <div id="image">
-                
+                <input type="file" id="file" name="myfile">
             </div>
            <div id="nameContainer">
             <div id="name">
