--- a/.vercel/output/static/EventDetails.html
+++ b/.vercel/output/static/EventDetails.html
@@ -30,6 +30,7 @@
         </div>
         </div>
     </div>
-    <script src="EventDetails.js"></script>
+    <script defer src="https://cdn.socket.io/4.0.0/socket.io.min.js"></script>
+    <script type="module" defer src="EventDetails.js"></script>
 </body>
 </html>
