--- a/.vercel/output/static/Login.html
+++ b/.vercel/output/static/Login.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h2>Login</h2>
-        <form action="https://kickits-1.onrender.com/KickIt/login" method="POST">
+        <form action="http://127.0.0.1:8000/KickIt/login" method="POST">
             
             <div class="form-group">
                 <label for="email">Email</label>
