--- a/.vercel/output/static/profile.html
+++ b/.vercel/output/static/profile.html
@@ -93,6 +93,6 @@
         <button id="update"> UPDATE</button>
     </div> 
    
-    <script src="./profile.js"></script>
+    <script type="module" src="./profile.js"></script>
 </body>
 </html>
