--- a/FrontEnd/createEvents.html
+++ b/FrontEnd/createEvents.html
@@ -68,6 +68,6 @@
             <button id='createEvent'type="submit">Create</button>
        
     </div>
-    <script src="./createEvents.js"></script>
+    <script type="module" src="./createEvents.js"></script>
 </body>
 </html>
