adding notification front end and bug fixing

--- a/FrontEnd/acceptRequest.html
+++ b/FrontEnd/acceptRequest.html
@@ -63,7 +63,7 @@
             <p id="time">Address: 123 Main St, Anytown, USA</p>
     </div>
    
-    <script type="module" src="acceptRequest.js"></script>
-    <script type="module" src="ApiUrl.js"></script>
+    <script type="module" defer src="./acceptRequest.js"></script>
+   
 </body>
 </html>
