--- a/FrontEnd/myEvents.html
+++ b/FrontEnd/myEvents.html
@@ -16,8 +16,8 @@
             <button id="createEvent">Create</button>
             <button id="Logout">Logout</button>
             <button id="AllEvents">All Events</button>
-             <img id="notification-icon" src="https://img.icons8.com/ios-filled/50/ffffff/appointment-reminders.png" alt="Notifications">
-            
+            <img id="notification-icon" src="https://img.icons8.com/ios-filled/50/ffffff/appointment-reminders.png" alt="Notifications">
+            <img id="image"src="https://img.icons8.com/ios/50">
         
         </div>
     </div>
