--- a/.vercel/output/static/acceptRequest.html
+++ b/.vercel/output/static/acceptRequest.html
@@ -62,8 +62,8 @@
             <h2>Time</h2>
             <p id="time">Address: 123 Main St, Anytown, USA</p>
     </div>
-   
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="acceptRequest.js"></script>
-
+    
 </body>
 </html>
