--- a/FrontEnd/acceptRequest.html
+++ b/FrontEnd/acceptRequest.html
@@ -41,7 +41,7 @@
                 <div id="descriptionContainer">
                 <p id="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque leo nec magna fermentum, a facilisis ligula cursus.</p>
                 
-                
+                <canvas id="myChart"></canvas>
                </div>
                <h3>Email</h3>
                 <p id="email">Email: john.doe@example.com</p>
