--- a/.vercel/output/static/Login.html
+++ b/.vercel/output/static/Login.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h2>Login</h2>
-        <form action="https://kickits-1.onrender.com/KickIt/login" method="POST">
+        <form id="login" method="POST">
             
             <div class="form-group">
                 <label for="email">Email</label>
@@ -21,11 +21,12 @@
             </div>
            
             <button type="submit" class="btn">Login</button>
+            <div id="error-container" style="color: red; margin-top: 10px;"></div>
         </form>
         <div class="footer">
             <p> Create a account <a href="./SignUpPage.html">Sign Up</a></p>
         </div>
     </div>
-
+    <script type="module" defer src="./login.js"></script>
 </body>
 </html>
