--- a/FrontEnd/SignUpPage.html
+++ b/FrontEnd/SignUpPage.html
@@ -9,7 +9,7 @@
 
     <div class="container">
         <h2>Create Account</h2>
-        <form action="https://kickits-1.onrender.com/KickIt/signUp" method="POST">
+        <form id='signup' method="POST">
             <div class="form-group">
                 <label for="username">Username</label>
                 <input type="text" id="username" name="username" required placeholder="Enter your username">
@@ -28,10 +28,12 @@
             </div>
             <button type="submit" class="btn">Sign Up</button>
         </form>
+        <div id="error-container" style="color: red; margin-top: 10px;"></div>
         <div class="footer">
             <p>Already have an account? <a href="./Login.html">Log In</a></p>
         </div>
     </div>
-
+    <script type="module" defer src="./signUp.js"></script>
+   
 </body>
 </html>
