--- a/.vercel/output/static/createEvents.html
+++ b/.vercel/output/static/createEvents.html
@@ -66,7 +66,7 @@
             <input type="number" id="playersRequired" placeholder="Players Required" required>
             <textarea id="description" placeholder="Description" required></textarea>
             <button id='createEvent'type="submit">Create</button>
-       
+            <div id="error-container" style="color: red; margin-top: 10px;"></div>
     </div>
     <script type="module" src="./createEvents.js"></script>
 </body>
