--- a/FrontEnd/Login.html
+++ b/FrontEnd/Login.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,8 @@
             <div id="error-container" style="color: red; margin-top: 10px;"></div>
         </form>
         <div class="footer">
-            <p> Create a account <a href="./SignUpPage.html">Sign Up</a></p>
+            <p><a href="./forgotpassword.html">Forgot Password?</a></p>
+            <p> Create an account <a href="./SignUpPage.html">Sign Up</a></p>
         </div>
     </div>
     <script type="module" defer src="./login.js"></script>
