reset and forgot password implementation

--- a/FrontEnd/resetPassword.html
+++ b/FrontEnd/resetPassword.html
@@ -18,6 +18,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            background-image: url('https://t3.ftcdn.net/jpg/02/78/42/76/360_F_278427683_zeS9ihPAO61QhHqdU1fOaPk2UClfgPcW.jpg');
         }
 
         .reset-password-container {
@@ -166,7 +167,7 @@
                 <label for="confirm-password">Confirm Password</label>
                 <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm new password" required>
                 <span class="password-toggle" id="toggleConfirmPassword">👁️</span>
-                <div class="error-message" id="confirmError"></div>
+                <div id="error-container" style="color: red; margin-top: 10px;"></div>
             </div>
 
             <button type="submit" class="submit-btn" >Reset Password</button>
