--- a/.vercel/output/static/resetPassword.html
+++ b/.vercel/output/static/resetPassword.html
@@ -18,6 +18,7 @@
             justify-content: center;
             align-items: center;
             min-height: 100vh;
+            background-image: url('https://t3.ftcdn.net/jpg/02/78/42/76/360_F_278427683_zeS9ihPAO61QhHqdU1fOaPk2UClfgPcW.jpg');
         }
 
         .reset-password-container {
