--- a/.vercel/output/static/resetPassword.html
+++ b/.vercel/output/static/resetPassword.html
@@ -167,7 +167,7 @@
                 <label for="confirm-password">Confirm Password</label>
                 <input type="password" id="confirm-password" name="confirm-password" placeholder="Confirm new password" required>
                 <span class="password-toggle" id="toggleConfirmPassword">👁️</span>
-                <div class="error-message" id="confirmError"></div>
+                <div id="error-container" style="color: red; margin-top: 10px;"></div>
             </div>
 
             <button type="submit" class="submit-btn" >Reset Password</button>
