review fix websocket fix EventDetails fix

--- a/.vercel/output/static/EventDetails.html
+++ b/.vercel/output/static/EventDetails.html
@@ -34,6 +34,7 @@
                     <div id='division'>
                         <button id="Join">Join</button>
                         <button id="Chat">Chat</button>
+                        <button id="Leave">Leave</button>
                     </div>
                 </div>
             </div>
@@ -41,8 +42,7 @@
         <div class="right-div" id="right-div">
             <div class="additional-content" id="joined-users">
                 <!-- Add content for the additional div here -->
-                 <h1 id="heading">PLAYERS JOINED</h1>
-                 <p>-----------------------------------------------------------------------------------------</p>
+                 
                 
             </div>
         </div>
