--- a/ChatAppPractice/index.html
+++ b/ChatAppPractice/index.html
@@ -8,6 +8,7 @@
         body {
             font-family: Arial, sans-serif;
             background-color: #f4f4f4;
+            background-image: url('https://png.pngtree.com/thumb_back/fh260/background/20201026/pngtree-futuristic-shape-abstract-background-chemistry-technology-concept-for-website-image_438818.jpg');
             margin: 0;
             padding: 0;
             display: flex;
