--- a/FrontEnd/EventDetails.html
+++ b/FrontEnd/EventDetails.html
@@ -45,7 +45,7 @@
                     <h2>Date</h2>
                     <p id="Date">Address: 123 Main St, Anytown, USA</p>
                     <h3>Time</h3>
-                    <p>20:20AM</p>
+                    <p id="time">20:20AM</p>
                     <div id='division'>
                         <button id="Join">Join</button>
                         <button id="Chat">Chat</button>
