--- a/.vercel/output/static/EventDetails.html
+++ b/.vercel/output/static/EventDetails.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Event</title>
+    <title>Profile Page</title>
     <style>
         #heading {
     font-style: italic;
@@ -50,6 +50,7 @@
                         <button id="Join">Join</button>
                         <button id="Chat">Chat</button>
                         <button id="Leave">Leave</button>
+                        <button id="Delete">Delete Event</button>
                     </div>
                 </div>
             </div>
