--- a/FrontEnd/EventDetails.html
+++ b/FrontEnd/EventDetails.html
@@ -50,6 +50,7 @@
                         <button id="Join">Join</button>
                         <button id="Chat">Chat</button>
                         <button id="Leave">Leave</button>
+                        <button id="Delete">Delete Event</button>
                     </div>
                 </div>
             </div>
