--- a/FrontEnd/Login.html
+++ b/FrontEnd/Login.html
@@ -24,7 +24,7 @@
             <div id="error-container" style="color: red; margin-top: 10px;"></div>
         </form>
         <div class="footer">
-            <p><a href="./forgotpassword.html">Forgot Password?</a></p>
+            <p><a href="./forgotPassword.html">Forgot Password?</a></p>
             <p> Create an account <a href="./SignUpPage.html">Sign Up</a></p>
         </div>
     </div>
