--- a/FrontEnd/myEvents.html
+++ b/FrontEnd/myEvents.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Taskbar</title>
+    <title>My Events</title>
     <link rel="stylesheet" href="./myEvents.css">
 </head>
 <body>
