--- a/.vercel/output/static/AllEvents.html
+++ b/.vercel/output/static/AllEvents.html
@@ -18,8 +18,10 @@
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
             <div id="MyEvents">My Events</div>
+            <div id="About">About</div>
             <img id="notification-icon" src="https://img.icons8.com/ios-filled/50/ffffff/appointment-reminders.png" alt="Notifications">
             <img id="image" src="https://img.icons8.com/ios/50">
+            
         </div>
     </div>
    
