--- a/.vercel/output/static/acceptRequest.html
+++ b/.vercel/output/static/acceptRequest.html
@@ -18,7 +18,7 @@
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
             <div id="MyEvents">My Events</div>
-           
+           <div id="About">About</div>
             <img id="image" src="https://img.icons8.com/ios/50">
         </div>
     </div>
