--- a/.vercel/output/static/giveReview.html
+++ b/.vercel/output/static/giveReview.html
@@ -178,7 +178,7 @@
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
             <div id="MyEvents">All Events</div>
-           
+            <div id="About">About</div>
             <img id="profileIcon" src="https://img.icons8.com/ios/50">
         </div>
     </div>
