--- a/FrontEnd/EventDetails.html
+++ b/FrontEnd/EventDetails.html
@@ -23,7 +23,7 @@
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
             <div id="AllEvents">All Events</div>
-          
+            <div id="About">About</div>
             <img id="image" src="https://img.icons8.com/ios/50">
         </div>
     </div>
