--- a/FrontEnd/createEvents.html
+++ b/FrontEnd/createEvents.html
@@ -139,6 +139,7 @@
             <div id="Logout">Logout</div>
             <div id="MyEvents">My Events</div>
            <div id="AllEvents">All Events</div>
+           <div id="About">About</div>
             <img id="image" src="https://img.icons8.com/ios/50">
         </div>
     </div>
