--- a/FrontEnd/myEvents.html
+++ b/FrontEnd/myEvents.html
@@ -12,6 +12,7 @@
         <div class="auth-buttons" id="auth-buttons">
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
+            <div id="About">About</div>
             <div id="AllEvents">All Events</div>
             <img id="notification-icon" src="https://img.icons8.com/ios-filled/50/ffffff/appointment-reminders.png" alt="Notifications">
             <img id="image" src="https://img.icons8.com/ios/50">
