--- a/FrontEnd/profile.html
+++ b/FrontEnd/profile.html
@@ -244,6 +244,7 @@ button:hover {
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
             <div id="MyEvents">My Events</div>
+            <div id="About">About</div>
             <div id="AllEvents">All Events</div>
         </div>
     </div>
