--- a/.vercel/output/static/EventDetails.html
+++ b/.vercel/output/static/EventDetails.html
@@ -22,7 +22,7 @@
            
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
-            <div id="AllEvents">All Events</div>
+            <div id="AllEvents">Home</div>
             <div id="About">About</div>
             <img id="image" src="https://img.icons8.com/ios/50">
         </div>
