--- a/.vercel/output/static/createEvents.html
+++ b/.vercel/output/static/createEvents.html
@@ -138,7 +138,7 @@
          
             <div id="Logout">Logout</div>
             <div id="MyEvents">My Events</div>
-           <div id="AllEvents">All Events</div>
+            <div id="AllEvents">Home</div>
            <div id="About">About</div>
             <img id="image" src="https://img.icons8.com/ios/50">
         </div>
