--- a/FrontEnd/About.html
+++ b/FrontEnd/About.html
@@ -79,7 +79,7 @@
         <div id="signup-btn">Sign Up</div>
         <div id="createEvent">Create</div>
         <div id="Logout">Logout</div>
-        <div id="AllEvents">All Events</div>
+        <div id="AllEvents">Home</div>
         
         <img id="image" src="https://img.icons8.com/ios/50">
     </div>
