--- a/FrontEnd/giveReview.html
+++ b/FrontEnd/giveReview.html
@@ -177,7 +177,7 @@
             
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
-            <div id="MyEvents">All Events</div>
+            <div id="MyEvents">Home</div>
             <div id="About">About</div>
             <img id="profileIcon" src="https://img.icons8.com/ios/50">
         </div>
