--- a/FrontEnd/myEvents.html
+++ b/FrontEnd/myEvents.html
@@ -13,7 +13,7 @@
             <div id="createEvent">Create</div>
             <div id="Logout">Logout</div>
             <div id="About">About</div>
-            <div id="AllEvents">All Events</div>
+            <div id="AllEvents">Home</div>
             <img id="notification-icon" src="https://img.icons8.com/ios-filled/50/ffffff/appointment-reminders.png" alt="Notifications">
             <img id="image" src="https://img.icons8.com/ios/50">
         </div>
