--- a/FrontEnd/profile.html
+++ b/FrontEnd/profile.html
@@ -245,7 +245,7 @@ button:hover {
             <div id="Logout">Logout</div>
             <div id="MyEvents">My Events</div>
             <div id="About">About</div>
-            <div id="AllEvents">All Events</div>
+            <div id="AllEvents">Home</div>
         </div>
     </div>
 
