--- a/FrontEnd/giveReview.html
+++ b/FrontEnd/giveReview.html
@@ -30,6 +30,7 @@
         max-height: 30px;
         width: 100%; /* Make it span the full width of the page */
         z-index: 1000; /* Ensure it stays above other elements */
+        flex-wrap: wrap; /* Allow wrapping for smaller screens */
         }
 
 .start-menu .start-btn {
@@ -166,6 +167,53 @@
        background-color: #f4f4f4;
        margin: 0 auto;
        }
+       @media (max-width: 768px) {
+    .taskbar {
+        flex-direction: column; /* Stack elements vertically */
+        align-items: flex-start; /* Align items to the left */
+    }
+
+    .auth-buttons {
+        justify-content: center; /* Center the buttons */
+        gap: 10px; /* Reduce spacing between buttons */
+    }
+
+    .auth-buttons div {
+        padding: 8px 10px; /* Adjust padding for smaller screens */
+        font-size: 14px; /* Reduce font size */
+    }
+    .side-by-side-container {
+        flex-direction: column; /* Stack the divs vertically */
+        width: 90%; /* Adjust the width for smaller screens */
+        gap: 10px; /* Reduce the gap between the divs */
+    }
+
+    .side-by-side-container > div {
+        padding: 20px; /* Adjust padding for smaller screens */
+        max-height: 60vh; /* Adjust height for smaller screens */
+    }
+    .review-container {
+            width: 100%; /* Take full width on smaller screens */
+            padding: 15px; /* Adjust padding for smaller screens */
+        }
+
+        .review-container h1 {
+            font-size: 20px; /* Reduce font size for smaller screens */
+        }
+
+        .form-group input,
+        .form-group textarea,
+        .form-group select {
+            font-size: 12px; /* Adjust font size for smaller screens */
+        }
+
+        .submit-btn {
+            font-size: 14px; /* Adjust button font size for smaller screens */
+        }
+    
+}
+
+
     </style>
 </head>
 <body>
