--- a/FrontEnd/profile.html
+++ b/FrontEnd/profile.html
@@ -207,20 +207,17 @@ button:hover {
 }
 .auth-buttons {
     display: flex;
-    align-items: center;
- 
-    justify-content: flex-start; /* Keep other elements aligned to the left */
-    gap: 100px; /* Add spacing between the divs */
+        align-items: center;
+        gap: 100px; /* Add spacing between the buttons */
+        flex-wrap: wrap;
 }
 
 .auth-buttons div {
-    margin-left: 10px;
-    display: inline-block;
     padding: 10px 15px;
-    color: white;
-    border-radius: 5px;
-    cursor: pointer;
-    text-align: center;
+        color: white;
+        border-radius: 5px;
+        cursor: pointer;
+        text-align: center;
   
 }
 .auth-buttons div:hover {
@@ -231,6 +228,40 @@ button:hover {
 .auth-buttons img {
     margin-left: auto; /* Push the notification and image to the right */
 }
+@media (max-width: 708px) {
+    .taskbar {
+        flex-direction: column; /* Stack elements vertically */
+        align-items: flex-start; /* Align items to the left */
+    }
+
+    .auth-buttons {
+        justify-content: center; /* Center the buttons */
+        gap: 10px; /* Reduce spacing between buttons */
+    }
+
+    .auth-buttons div {
+        padding: 8px 10px; /* Adjust padding for smaller screens */
+        font-size: 14px; /* Reduce font size */
+    }
+    }
+
+    /* Media query for very small screens */
+    @media (max-width: 480px) {
+        .taskbar {
+        flex-direction: column; /* Stack elements vertically */
+        align-items: flex-start; /* Align items to the left */
+    }
+
+    .auth-buttons {
+        justify-content: center; /* Center the buttons */
+        gap: 10px; /* Reduce spacing between buttons */
+    }
+
+    .auth-buttons div {
+        padding: 8px 10px; /* Adjust padding for smaller screens */
+        font-size: 14px; /* Reduce font size */
+    }
+    }
 
     </style>
 </head>
