--- a/FrontEnd/createEvents.html
+++ b/FrontEnd/createEvents.html
@@ -64,9 +64,9 @@
         position: fixed; /* Fix the taskbar at the top */
         top: 0;
         left: 0;
-        max-height: 35px;
+       
         width: 100%; /* Make it span the full width of the page */
-        z-index: 1000; /* Ensure it stays above other elements */
+        
         flex-wrap: wrap; /* Allow wrapping for smaller screens */
 }
 
@@ -96,10 +96,9 @@
 }
 .auth-buttons {
     display: flex;
-    align-items: center;
- 
-    justify-content: flex-start; /* Keep other elements aligned to the left */
-    gap: 100px; /* Add spacing between the divs */
+        align-items: center;
+        gap: 100px; /* Add spacing between the buttons */
+        flex-wrap: wrap; /* Allow wrapping for smaller screens */
 }
 
 .auth-buttons div {
@@ -119,6 +118,8 @@
 }
 .auth-buttons img {
     margin-left: auto; /* Push the notification and image to the right */
+    width: 30px;
+    height: 30px;
 }
 #image{
     width: 30px;
@@ -128,6 +129,45 @@
     margin: 0 auto;
 }
 @media (max-width: 768px) {
+    .taskbar {
+        flex-direction: column; /* Stack elements vertically */
+        align-items: flex-start; /* Align items to the left */
+    }
+
+    .auth-buttons {
+        justify-content: center; /* Center the buttons */
+        gap: 10px; /* Reduce spacing between buttons */
+    }
+
+    .auth-buttons div {
+        padding: 8px 10px; /* Adjust padding for smaller screens */
+        font-size: 14px; /* Reduce font size */
+    }
+    .side-by-side-container {
+        flex-direction: column; /* Stack the divs vertically */
+        width: 90%; /* Adjust the width for smaller screens */
+        gap: 10px; /* Reduce the gap between the divs */
+    }
+
+    .side-by-side-container > div {
+        padding: 20px; /* Adjust padding for smaller screens */
+        max-height: 60vh; /* Adjust height for smaller screens */
+    }
+    .event-details {
+        width: 90%; /* Adjust the width for smaller screens */
+        margin: 20px auto; /* Reduce the margin for smaller screens */
+        padding: 15px; /* Adjust padding for smaller screens */
+    }
+
+    .event-details h2 {
+        font-size: 20px; /* Reduce font size for smaller screens */
+    }
+
+    .event-details p {
+        font-size: 14px; /* Reduce font size for smaller screens */
+    }
+}
+@media (max-width: 480px) {
     .taskbar {
         flex-direction: column; /* Stack elements vertically */
         align-items: flex-start; /* Align items to the left */
