--- a/.vercel/output/static/AllEvents.html
+++ b/.vercel/output/static/AllEvents.html
@@ -43,6 +43,8 @@
                     <li id="signup-btn"><a class="dropdown-item" href="#" >SignUp</a></li>
                     <li id="MyEvents"><a class="dropdown-item" href="#" >MyEvents</a></li>
                     <li id="createEvent"><a class="dropdown-item" href="#" >Create</a></li>
+                    <li id="notification"><a class="dropdown-item" href="#" >Requests</a></li>
+                    
                     <li><hr class="dropdown-divider"></li>
                     <li id="Logout"><a class="dropdown-item" href="#" >Log Out</a></li>
                   </ul>
