--- a/FrontEnd/src/index.html
+++ b/FrontEnd/src/index.html
@@ -58,7 +58,7 @@
         </div>
         <div class="hidden sm:ml-6 sm:block">
           <div class="flex space-x-4">
-            <a href="#cards-div" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white no-underline" aria-current="page" >About</a>
+            <a href="#About" class="rounded-md bg-gray-900 px-3 py-2 text-sm font-medium text-white no-underline" aria-current="page" >About</a>
             <a href="#events"  class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white no-underline">Events</a>
             <a href="#create"  class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white no-underline">Create</a>
             <a href="#calender" class="rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white no-underline">Calendar</a>
@@ -191,7 +191,7 @@
 </div>
            
         </div>
-       <div id="cards-div" class="grid grid-cols-2 gap-6 w-full">
+       <div id="About" class="grid grid-cols-2 gap-6 w-full">
         <div class="cards" id="cards">
       <section >
  <div class="max-w-screen-xl 2xl:max-w-screen-3xl px-8 md:px-12 mx-auto py-12 lg:py-24 space-y-24 flex flex-col justify-center">
@@ -324,7 +324,7 @@
             <a href="#left-div" class="hover:underline me-4 md:me-6">About</a>
         </li>
         <li>
-            <a href="#cards-div" class="hover:underline me-4 md:me-6">Privacy Policy</a>
+            <a href="#About" class="hover:underline me-4 md:me-6">Privacy Policy</a>
         </li>
         <li>
             <a href="#" class="hover:underline me-4 md:me-6">Licensing</a>
