--- a/FrontEnd/src/profile.html
+++ b/FrontEnd/src/profile.html
@@ -524,6 +524,34 @@ background-image: url('https://m.media-amazon.com/images/I/81NE5bSsUML._AC_UF894
     </div>
      </div>
     <div>
+      <div class="font-std mb-10 w-100 h-full rounded-2xl bg-white p-10 font-normal leading-relaxed text-gray-900 shadow-xl" id="showReviews"> 
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+<section class="pb-12 mx-auto md:pb-20 max-w-7xl">
+    <div class="py-4 text-center md:py-8">
+        <h4 class="text-base font-bold tracking-wide text-center uppercase text-teal-600">Reviews</h4>
+        <p class="mt-2 tracking-tight text-gray-900 text:xl md:text-2xl">We have some fans.</p>
+    </div>
+   <div class="text-sm leading-6" id="newReviews">
+    <figure class="relative flex flex-col-reverse bg-slate-100 rounded-lg p-6 dark:bg-slate-800 dark:highlight-white/5">
+        <blockquote class="mt-6 text-slate-700 dark:text-slate-300">
+            <p>I may not show it but i cant live without {product}.</p>
+        </blockquote>
+        <figcaption class="flex items-center space-x-4">
+            <img id='reviewerImage' src="https://images.unsplash.com/photo-1632910121591-29e2484c0259?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0NzEyNjZ8MHwxfHNlYXJjaHw4fHxjb2RlcnxlbnwwfDB8fHwxNzEwMTY0NjIzfDA&ixlib=rb-4.0.3&q=80&w=1080" alt="" class="flex-none w-14 h-14 rounded-full object-cover" loading="lazy" decoding="async">
+            <div class="flex-auto">
+                <div class="text-base text-slate-900 font-semibold dark:text-slate-200" id="reviewer-name">
+                    John Doe
+                </div>
+                <div class="mt-0.5 dark:text-slate-300">
+                    Web Developer
+                </div>
+            </div>
+        </figcaption>
+    </figure>
+</div>
+</section>
+      </div>
         
  <div id="container"  style="z-index: 200;">
     <div style="height:50px;"> </div>
@@ -552,7 +580,7 @@ background-image: url('https://m.media-amazon.com/images/I/81NE5bSsUML._AC_UF894
       <button id="update" class="flex-1 bg-pink-500 hover:bg-pink-600 text-white font-bold py-1 px-4 rounded-lg text-sm z-200"style="z-index: 200;">
         Update Profile
       </button>
-      <button class="flex-1 bg-gray-100 hover:bg-gray-200 text-gray-800 font-bold py-1 px-4 rounded-lg text-sm">
+      <button class="flex-1 bg-gray-100 hover:bg-gray-200 text-gray-800 font-bold py-1 px-4 rounded-lg text-sm" id="Reviews">
         Reviews
       </button>
       
